--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -9,30 +9,58 @@
             Padding="30,0"
             VerticalOptions="Center">
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-
             <Label
-                Text="Hello, World!"
+                x:Name="DisplayTitle"
+                Text="Welcome to my Quiz"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
 
             <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
+                x:Name="DisplayQuestion"
+                Text="Welcome to my Quiz"
+                SemanticProperties.HeadingLevel="Level1"
+                FontSize="32"
+                HorizontalOptions="Center" />
+
+            <RadioButton 
+                x:Name="Option1Button"
+                Content="Option1" 
+                CheckedChanged="Option1_CheckedChanged"
+                HorizontalOptions="Center"
+                />
+
+            <RadioButton 
+                x:Name="Option2Button"
+                Content="Option2" 
+                CheckedChanged="Option2_CheckedChanged"
+                HorizontalOptions="Center"
+                />
+
+            <RadioButton
+                x:Name="Option3Button"
+                Content="Option3" 
+                CheckedChanged="Option3_CheckedChanged"
+                HorizontalOptions="Center"
+                />
+
+            <RadioButton 
+                x:Name="Option4Button"
+                Content="Option4" 
+                CheckedChanged="Option4_CheckedChanged"
+                HorizontalOptions="Center"
+                />
+
+            <Button
+                x:Name="QuitButton"
+                Text="Click me"
+                Clicked="QuitButton_Clicked"
                 HorizontalOptions="Center" />
 
             <Button
-                x:Name="CounterBtn"
+                x:Name="NextQuestionButton"
                 Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
+                Clicked="NextQuestionButton_Clicked"
                 HorizontalOptions="Center" />
 
         </VerticalStackLayout>
